# baby-event-listings

./: README.md  convert.py
app/: page.tsx
app/components/: event-filter.tsx  event-modal.tsx
app/lib/: utils.ts
event_extraction/: pyproject.toml
event_extraction/src/: compare_csvs.py  llm_parsing.py  parse_timetable_image.py  push_to_platform.py  scrape_brixton_timetable.py  table_chunkers.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: event-filter.tsx  event-modal.tsx  multi-select.tsx
frontend/app/types/: events.ts
frontend/data/: events.ts  venues.ts
frontend/public/data/: events.csv  joined.csv  venues.csv
lib/: utils.ts
